Login now fully works on Android.

--- a/Android/Scrummerz/app/src/main/res/values/strings.xml
+++ b/Android/Scrummerz/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Scrummerz</string>
     <string name="logIn">Log in</string>
+    <string name="auth_failed">Autensiering misslyckades</string>
 </resources>
