forgot one string on last commit

--- a/Android/Scrummerz/app/src/main/res/values/strings.xml
+++ b/Android/Scrummerz/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="menuMyGrades">Mina betyg</string>
     <string name="menuRegisterAttendance">Registrera närvaro</string>
     <string name="feelingToday">Hur känner du dig idag?</string>
+    <string name="authenticationFailed">Autensiering misslyckades.</string>
 </resources>
